Fixing alert messages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,8 @@
   </head>
 
   <body>
-    <p style="color: green;"><%= notice %></p>
-    <p style="color: red;"><%= alert %></p>
+    <p id='notice' style="color: green;"><%= notice %></p>
+    <p id='alert'  style="color: red;"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
