Improving new session page

--- a/app/views/chat_messages/new_session.html.erb
+++ b/app/views/chat_messages/new_session.html.erb
@@ -1,4 +1,5 @@
 <%= form_for :user, url: create_session_chat_messages_path do |f| %>
+  <h3>Type your name to login</h3>
   <%= f.label :name %>
   <%= f.text_field :name %>
 
