Creating ajax to update messages

--- a/app/views/chat_messages/index.html.erb
+++ b/app/views/chat_messages/index.html.erb
@@ -4,18 +4,16 @@
 <br>
 <br>
 
-<% @chat_messages.each do |chat_message| %>
-  <hr>
-  <strong><%= chat_message.user_name %>:</strong> <%= chat_message.content %>
-  <br>
-  <em>Sent at <%= l(chat_message.created_at, format: :short) %></em>
-<% end %>
+<div id='history'>
+  <%= image_tag 'ajax.gif' %> Loading...
+</div>
+
 <hr>
 <br>
 <br>
 <br>
 
-<%= form_for @chat_message do |f| %>
+<%= form_for @chat_message, remote: true do |f| %>
   <%= f.hidden_field :user_name, value: session[:user_name] %>
   <%= f.label :content, 'Message:' %>
   <%= f.text_field :content, style: 'width: 70%; height: 1.4em;' %>
